# wthr_backend

./: .env  Cargo.toml  Dockerfile  README.md  startserver.sh
src/: error_handler.rs  main.rs
src/apicall/: routes.rs
